# iteshu

./: .gitignore  CMakeLists.txt  README.md
armsim_iteshu/: CMakeLists.txt  package.xml
armsim_iteshu/launch/: arm_gazebo.launch~  arm_rviz.launch~
armsim_iteshu/src/: arm.urdf.xacro~
armsim_iteshu/urdf/: arm.urdf.xacro~  arm.xacro~  arm_macros.xacro~
beginner_tutorials/: .project  .pydevproject  CMakeLists.txt
beginner_tutorials/launch/: practica1_part1.launch~  turtlemimic.launch~
beginner_tutorials/scripts/: listener.py  listener.py~  pub_list.py~  strings_test.py~  tf_broadcaster.py  turtle_triangle.py
beginner_tutorials/src/: differential_robot_voice_control_arduino.cpp~  talker.cpp
iteshu/: package.xml
iteshu_robot/: .cproject  .project  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  setup.py
iteshu_robot/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
iteshu_robot/conf/: asus_camera_calibration.yaml
iteshu_robot/launch/: coyote_recognizer.launch  coyote_talk.launch  demo_ar_pose.launch  kinect_to_laser.launch  servo_following.launch  sim_nav_ros.launch  start_openni_tracker.launch  start_rosserial.launch  (+1 more)
learning_tf/: .cproject  .project  CTestTestfile.cmake  Makefile  cmake_install.cmake
openni_tracker/: .cproject  .project
solidworks_arm/: CMakeLists.txt  manifest.xml  package.xml  urdf.rviz
solidworks_arm/launch/: display.launch  gazebo.launch
solidworks_arm/meshes/: base_link.STL  link1.STL  link3.STL
solidworks_arm/robots/: solidworks_arm.URDF
(+20 files in other folders)
