<?xml version="1.0"?>
<package>
    <name>solidworks_arm</name>
  <version>0.0.0</version>
  <description>solidworks_arm</description>
    <maintainer email="aaron@todo.todo">aaron</maintainer>
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <!--build_depend>gazebo</build_depend>
  <run_depend>gazebo</run_depend-->
</package>
